# cue-breakers

./: .env  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile.toml  README.md  compose.yaml  package.json  pnpm-lock.yaml
apps/api/: Cargo.toml  Dockerfile
apps/api/src/: main.rs  routes.rs  socket.rs
apps/api/src/rooms/: api.rs  mod.rs  model.rs  storage.rs  websocket.rs
apps/api/src/sessions/: mod.rs
apps/api/src/utils/: storage.rs
apps/api/src/web/: mod.rs
apps/web/: .eslintrc.cjs  components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
apps/web/src/: App.tsx  constants.ts  index.css  main.tsx  useGameController.tsx
apps/web/src/components/: pageCard.tsx
apps/web/src/games/: eightBallGame.tsx  eightBallScene.tsx
apps/web/src/hooks/: index.ts  useGameSession.ts  usePageHistory.ts  useSignalServer.ts  useStateWithCurrent.ts  useStateWithRef.ts
apps/web/src/pages/: gameTypePage.tsx  pageType.tsx  playModePage.tsx
apps/web/src/physics/: temp.ts
apps/web/src/scenes/: eightBallScene.ts  eightBallScene.tsx  sceneRenderer.ts
client/: package.json
client/src/: App.tsx
libs/contracts/: Cargo.toml
libs/contracts/src/: lib.rs
libs/game-logic/: Cargo.toml
libs/game-logic/src/: game_object.rs  game_object_type.rs  game_session.rs  game_type.rs  lib.rs  utils.rs
libs/game-logic/src/game_session/: constants.rs  eight_ball.rs  mod.rs  nine_ball.rs
libs/physics/: Cargo.toml
libs/physics/src/: lib.rs
server/: Cargo.toml  go.mod  package.json
server/src/: main.rs
(+25 files in other folders)
