[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
lib-game-logic = { path = "../../libs/game-logic" }
lib-physics = { path = "../../libs/physics" }
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
socketioxide = "0.14.0"
tokio = { version = "1.39.2", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
