[package]
name = "lib-game-logic"
version = "0.1.0"
edition = "2021"
description = "Game logic library"

[dependencies]
lib-physics = { path = "../physics" }
wasm-bindgen = "0.2.92"
js-sys = "0.3.70"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.web-sys]
version = "0.3"
features = ["console"]
