[package]
name = "lib-physics"
version = "0.1.0"
edition = "2021"
description = "Physics library"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
glam = "0.29.0"
wasm-bindgen = "0.2.92"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[target.wasm32-unknown-unknown]
rustflags = ["-C", "target-feature=+simd128"]
